# crunch

./: .gitignore  CMakeLists.txt  blas_axpy.cpp  blas_dot.cpp  blas_nrm2.cpp  blas_scale.cpp  cpu_axpy.cpp  cpu_dot.cpp  cpu_nrm2.cpp  cpu_scale.cpp  main.cpp  memory.cpp  types.h
cmake/: FindSYCLCompiler.cmake
common/: types.h
mpi/: all_reduce.cpp  broadcast.cpp  main.cpp  mpi_cpu_dot.cpp  mpi_cpu_nrm2.cpp  mpi_cpu_scale.cpp  reduce.cpp  send_recv.cpp  utils.h
src/: blas_axpy.cpp  blas_dot.cpp  blas_nrm2.cpp  blas_scale.cpp  cpu_axpy.cpp  cpu_dot.cpp  cpu_nrm2.cpp  cpu_scale.cpp  sycl_axpy.cpp  sycl_dot.cpp  sycl_nrm2.cpp  sycl_scale.cpp
